Gestión de errores 404. Todos los segmentos de idioma a minúscula para evitar errores inesperados. Helper Menu para pintar los enlaces del menú (falta elemento activo) Servicio Menú. Corregido bug en findLocales de AdministratorTable ("language_code" no se puede incluir cuando estamos en el administrador), se controla su inclusión mediante parámetros Revisada la lógica de creación de keys de la tabla app_routes (en SectionFieldset)

--- a/module/Application/view/application/home/index.phtml
+++ b/module/Application/view/application/home/index.phtml
@@ -1,4 +1,6 @@
 <?php
+$menuHelper = $this->applicationMenuHelper();
+
 $this->headLink()->appendStylesheet($this->basePath('absconsultor/css/home.css'))
 ?>
 <div class="container-fluid home">
@@ -25,10 +27,7 @@ $this->headLink()->appendStylesheet($this->basePath('absconsultor/css/home.css')
 
         <img id="home_brand_logo" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Logo ABS Consultor" class="transition brand-logo"/>
         <ul class="nav home-navbar navbar-nav transition">
-            <li><a href="/empresa">Empresa</a></li>
-            <li><a href="/trabajos">Trabajos</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/contacto">Contacto</a></li>
+            <?=$menuHelper->render($menu,$lang);?>
         </ul>
 
         <div class="col-xs-12 hidden-sm hidden-xs">
