--- a/module/Application/view/layout/front-layout.phtml
+++ b/module/Application/view/layout/front-layout.phtml
@@ -1,4 +1,8 @@
-<?php echo $this->doctype(); ?>
+<?php
+
+$menuHelper = $this->applicationMenuHelper();
+
+echo $this->doctype(); ?>
 
 <html lang="es">
     <head>
@@ -32,17 +36,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>">
+                    <a class="navbar-brand" href="<?php echo $this->url($lang,array('lang' => $lang)) ?>">
                         <img width="120" src="<?php echo $this->basePath('img/white-logo.png') ?>" alt="Logo ABS Consultor"/>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <!--<li class="active"><a href="<?php /*echo $this->url('home') */?>"><?php /*echo $this->translate('Home') */?></a></li>-->
-                        <li><a href="/empresa">Empresa</a></li>
-                        <li><a href="/trabajos">Trabajos</a></li>
-                        <li><a href="/blog">Blog</a></li>
-                        <li><a href="/contacto">Contacto</a></li>
+                        <?=$menuHelper->render($menu,$lang);?>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -64,11 +64,7 @@
 
                     <div class="col-md-4">
                         <ul class="nav navbar-nav footer-nav">
-                            <!--<li class="active"><a href="<?php /*echo $this->url('home') */?>"><?php /*echo $this->translate('Home') */?></a></li>-->
-                            <li><a href="/empresa">Empresa</a></li>
-                            <li><a href="/trabajos">Trabajos</a></li>
-                            <li><a href="/blog">Blog</a></li>
-                            <li><a href="/contacto">Contacto</a></li>
+                            <?=$menuHelper->render($menu,$lang);?>
                         </ul>
                     </div>
 
