--- a/public/absconsultor/css/absconsultor.css
+++ b/public/absconsultor/css/absconsultor.css
@@ -107,7 +107,7 @@ form input.form-control {
 
 .abs .breadcrumb a:hover {
     border-top: 1px solid #00344f;;
-    border-bottom: 1px solid #00344f;;
+    border-bottom: 1px solid #00344f;
 }
 
 .abs > .container:first-child {
@@ -117,7 +117,7 @@ form input.form-control {
 
 nav {
     overflow: hidden;
-    background-color: rgba(0, 52, 79, 0.9);
+    background-color: rgba(0, 52, 79, 1);
 }
 
 
@@ -161,14 +161,24 @@ footer .footer-nav a{
     font-weight: bold;
 }
 
-.nav>li>a:focus, footer .footer-nav a:focus,
-.nav>li>a:hover, footer .footer-nav a:hover {
+.nav > li > a:focus, footer .footer-nav li > a:focus,
+.nav > li > a:hover, footer .footer-nav li > a:hover,
+.nav > li.active > a, footer .footer-nav li.active > a,
+.nav > li.active > a, footer .footer-nav li.active > a {
     background-color: transparent;
     border-top: 2px solid white;
     border-bottom: 2px solid white;
     padding-top: 13px;
     padding-bottom: 13px;
 }
+
+.nav > li.active > a:focus, footer .footer-nav li.active > a:focus,
+.nav > li.active > a:hover, footer .footer-nav li.active > a:hover {
+    border-top: 2px solid #23527c;
+    border-bottom: 2px solid #23527c;
+    color: #23527c;
+}
+
 
 .btn.btn-default {
     font-family: 'Open Sans Condensed',sans-serif;
