Introducción de cadenas estáticas por idioma Helper Social Icons

--- a/module/Application/view/application/blog/index.phtml
+++ b/module/Application/view/application/blog/index.phtml
@@ -37,7 +37,7 @@
                                 </span>
                             </div>
                             <div class="col-md-3">
-                                <a href="/blog/categorias/blog1" class="btn btn-default pull-right">Leer más</a>
+                                <a href="/blog/categorias/blog1" class="btn btn-default pull-right"><?=$this->translate('Read more','frontend');?></a>
                             </div>
                         </div>
                     </div>
