--- a/module/Application/view/application/company/collaborators.phtml
+++ b/module/Application/view/application/company/collaborators.phtml
@@ -34,7 +34,7 @@
                         Nam volutpat rhoncus magna non porttitor. Donec euismod vitae velit in sollicitudin. Nam vitae dui pulvinar, lobortis mi a,
                         ultricies ante. Morbi ligula mi, dapibus ac nisi sagittis, placerat mollis erat. Vivamus cursus augue et ex aliquam sollicitudin.
                     </p>
-                    <a href="/" class="btn btn-default ">+ Información</a>
+                    <a href="/" class="btn btn-default "><?=$this->translate('More info','frontend');?></a>
                 </div>
             </div>
 
@@ -50,7 +50,7 @@
                         Nam volutpat rhoncus magna non porttitor. Donec euismod vitae velit in sollicitudin. Nam vitae dui pulvinar, lobortis mi a,
                         ultricies ante. Morbi ligula mi, dapibus ac nisi sagittis, placerat mollis erat. Vivamus cursus augue et ex aliquam sollicitudin.
                     </p>
-                    <a href="/" class="btn btn-default ">+ Información</a>
+                    <a href="/" class="btn btn-default "><?=$this->translate('More info','frontend');?></a>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                         Nam volutpat rhoncus magna non porttitor. Donec euismod vitae velit in sollicitudin. Nam vitae dui pulvinar, lobortis mi a,
                         ultricies ante. Morbi ligula mi, dapibus ac nisi sagittis, placerat mollis erat. Vivamus cursus augue et ex aliquam sollicitudin.
                     </p>
-                    <a href="/" class="btn btn-default ">+ Información</a>
+                    <a href="/" class="btn btn-default "><?=$this->translate('More info','frontend');?></a>
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
                         Nam volutpat rhoncus magna non porttitor. Donec euismod vitae velit in sollicitudin. Nam vitae dui pulvinar, lobortis mi a,
                         ultricies ante. Morbi ligula mi, dapibus ac nisi sagittis, placerat mollis erat. Vivamus cursus augue et ex aliquam sollicitudin.
                     </p>
-                    <a href="/" class="btn btn-default ">+ Información</a>
+                    <a href="/" class="btn btn-default "><?=$this->translate('More info','frontend');?></a>
                 </div>
             </div>
 
