--- a/module/Application/view/application/job/detail.phtml
+++ b/module/Application/view/application/job/detail.phtml
@@ -1,10 +1,13 @@
+<?php
+$jobMenuId         = $menu->rows['jobs']->id;
+?>
 <div class="row nav-breadcrumb hidden-xs">
     <div class="container">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item"><a href="">Trabajos</a></li>
-            <li class="breadcrumb-item"><a href="">Implantación ISO 9000</a></li>
-            <li class="breadcrumb-item active"><a href="">Nombre Trabajo</a></li>
+            <li class="breadcrumb-item"><a href="<?=$this->url($lang)?>">Home</a></li>
+            <li class="breadcrumb-item"><a href="<?=$this->url($lang.'/jobs')?>"><?=$menu->locale->{$lang}[$jobMenuId]->name?></a></li>
+            <li class="breadcrumb-item"><a href="<?=$this->url($lang.'/jobs/category',array('category' => $currentCategory['urlKey']))?>"><?=$currentCategory['title']?></a></li>
+            <li class="breadcrumb-item active"><?=$job->title;?></li>
         </ol>
     </div>
 </div>
@@ -16,10 +19,13 @@
         <div class="row">
             <div class="col-md-12">
 
-                <h1>Nombre del Trabajo</h1>
+                <h1><?=$job->title;?></h1>
 
                 <div id="owl_carousel">
                     <div class="item">
+                        <img src="/media/<?=$job->imageUrl;?>" alt="<?=$job->title;?>">
+                    </div>
+                    <!--<div class="item">
                         <img src="/media/maqueta/job-detail-1.png" alt="Collab">
                     </div>
                     <div class="item">
@@ -30,32 +36,9 @@
                     </div>
                     <div class="item">
                         <img src="/media/maqueta/job-detail-1.png" alt="Collab">
-                    </div>
+                    </div>-->
                 </div>
-
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
-                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas. Nulla facilisi.
-                    Nam volutpat rhoncus magna non porttitor. Donec euismod vitae velit in sollicitudin. Nam vitae dui pulvinar, lobortis mi a,
-                    ultricies ante. Morbi ligula mi, dapibus ac nisi sagittis, placerat mollis erat. Vivamus cursus augue et ex aliquam sollicitudin.
-                </p>
-
-                <p>
-                    Cras eleifend, risus sed elementum efficitur, ipsum justo elementum turpis, id dapibus nisl massa non neque.
-                    Vivamus et ex sollicitudin, consequat leo vitae, posuere libero. Sed sed sagittis dui, non mollis magna.
-                    Nulla convallis rutrum accumsan. Integer fringilla eleifend sapien, et rhoncus mi tristique eu.
-                    Maecenas elementum iaculis pretium. Aenean eu tempus eros, vitae vulputate elit. Nulla ultricies est et urna posuere viverra.
-                    Suspendisse potenti. Donec non odio massa. Aliquam vitae elementum neque. Integer at neque purus. Mauris venenatis tempor diam,
-                    pellentesque gravida lorem accumsan nec. Aenean a luctus purus, non vestibulum turpis.
-                </p>
-
-                <p>
-                    Fusce eu lectus et nisi sollicitudin maximus. Etiam sollicitudin ornare justo in eleifend. Donec ac velit massa.
-                    Curabitur tincidunt elit velit, vitae hendrerit magna tincidunt eu. Integer nisl tortor,
-                    maximus elementum dignissim dignissim, luctus non leo. Nullam luctus elementum sapien, in tincidunt orci.
-                    Donec elementum erat nec porta congue.
-                </p>
-
+                <?=$job->content;?>
             </div>
         </div>
     </article>
