--- a/module/Application/view/application/blog/index.phtml
+++ b/module/Application/view/application/blog/index.phtml
@@ -1,118 +1,61 @@
+<?php
+$blogMenuId         = $menu->rows['blog']->id;
+$blogHelper         = $this->blogHelper();
+$blogCategoryHelper = $this->blogCategoryHelper();
+?>
 <div class="row nav-breadcrumb hidden-xs">
     <div class="container">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active">Blog</li>
+            <li class="breadcrumb-item"><a href="<?=$this->url($lang)?>">Home</a></li>
+            <?php if(!isset($currentCategory)):?>
+                <li class="breadcrumb-item active"><?=$menu->locale->{$lang}[$blogMenuId]->name?></li>
+            <?php else :?>
+                <li class="breadcrumb-item"><a href="<?=$this->url($lang.'/blog')?>"><?=$menu->locale->{$lang}[$blogMenuId]->name?></a></li>
+                <li class="breadcrumb-item active"><?=$currentCategory['title']?></a></li>
+            <?php endif?>
         </ol>
     </div>
 </div>
 
-<div class="container blog">
+<div class="container blogs">
 
     <article>
 
         <div class="row">
             <div class="col-md-9">
 
-                <h1>Blog</h1>
+                <h1><?=$menu->locale->{$lang}[$blogMenuId]->name?></h1>
 
                 <div class="row">
-                    <div class="col-md-12 list-item job">
-                        <div class="row">
-                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job1.png" /></div>
-                            <div class="col-md-7">
-                                <h2>Entrada 1</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
-                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <span>
-                                    <i class="fa fa-tag"></i>
-                                    <a href="/">Implantación ISO</a>
-                                    <a href="/">Reparaciones</a>
-                                </span>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="/blog/categorias/blog1" class="btn btn-default pull-right"><?=$this->translate('Read more','frontend');?></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12 list-item job">
-                        <div class="row">
-                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job2.png" /></div>
-                            <div class="col-md-7">
-                                <h2>Entrada 1</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
-                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <span>
-                                    <i class="fa fa-tag"></i>
-                                    <a href="/">Implantación ISO</a>
-                                    <a href="/">Reparaciones</a>
-                                </span>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="/blog/categorias/blog2" class="btn btn-default pull-right">Leer más</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12 list-item job">
-                        <div class="row">
-                            <div class="col-md-5"><img class="img-responsive" src="/media/maqueta/job3.png" /></div>
-                            <div class="col-md-7">
-                                <h2>Entrada 3</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et nunc pulvinar dui elementum euismod quis ut elit.
-                                    Sed cursus et arcu at malesuada. Integer rhoncus congue cursus. Sed dictum viverra egestas.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <span>
-                                    <i class="fa fa-tag"></i>
-                                    <a href="/">Implantación ISO</a>
-                                    <a href="/">Reparaciones</a>
-                                </span>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="/blog/categorias/blog3" class="btn btn-default pull-right">Leer más</a>
-                            </div>
-                        </div>
-                    </div>
-
+                    <?php $blogHelper->render($lang, $blogs);?>
                 </div>
             </div>
             <aside class="col-md-3">
                 <h3>Categorias</h3>
                 <ul>
-                    <li><a href="/blog/categoria1">Categoría 1</a></li>
-                    <li><a href="/blog/categoria2">Categoría 2</a></li>
-                    <li><a href="/blog/categoria3">Categoría 3</a></li>
-                    <li><a href="/blog/categoria4">Categoría 4</a></li>
+                    <?php $blogCategoryHelper->render($lang,$blogCategories);?>
                 </ul>
             </aside>
         </div>
 
         <div class="row">
             <div class="col-md-12">
-                <ul class="pagination">
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                </ul>
+                <?php
+                // add at the end of the file after the table
+                echo $this->paginationControl(
+                // the paginator object
+                    $blogs,
+                    // the scrolling style
+                    'sliding',
+                    // the partial to use to render the control
+                    'partial/paginator.phtml',
+                    // the route to link to when a user clicks a control link
+                    array(
+                        'route' => $routePagination,
+                        'routeParams' => $routeParams
+                    )
+                );
+                ?>
             </div>
         </div>
 
