--- a/module/Application/view/application/legal/index.phtml
+++ b/module/Application/view/application/legal/index.phtml
@@ -3,14 +3,14 @@
     <div class="container">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="<?=$this->url($lang)?>">Home</a></li>
-            <li class="breadcrumb-item active"><?=$content->title?></li>
+            <li class="breadcrumb-item active"><?=$content['title']?></li>
         </ol>
     </div>
 </div>
 
 <div class="container legal">
     <article>
-        <h1><?=$content->title?></h1>
-        <?=$content->content;?>
+        <h1><?=$content['title']?></h1>
+        <?=$content['content'];?>
     </article>
 </div>
