--- a/module/Application/view/layout/front-layout.phtml
+++ b/module/Application/view/layout/front-layout.phtml
@@ -9,7 +9,7 @@ echo $this->doctype(); ?>
 <html lang="<?=$lang?>">
     <head>
         <meta charset="utf-8">
-        <?php echo $this->headTitle('ABS Consultor')->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?php echo $this->headTitle();?>
 
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
